--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mmxb.utilmiao.MainActivity">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/weather_tv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        tools:text="天气"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天气" />
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary">
+
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/circle" />
+
+    </FrameLayout>
+
+
+</LinearLayout>
