--- a/UtilMiaoApp/app/src/main/res/layout/activity_main.xml
+++ b/UtilMiaoApp/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/weather_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="480dp"
         android:layout_height="wrap_content"
-        android:text="天气" />
-
-    <FrameLayout
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="@color/colorPrimary">
-
-        <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/circle" />
-
-    </FrameLayout>
-
+        android:background="@color/colorAccent"
+        android:text="天气天气天气天气天气天气天气天气天气天气天气天气天气天气天气天气" />
 
 </LinearLayout>
