--- a/UtilMiaoApp/app/src/main/res/layout/activity_main.xml
+++ b/UtilMiaoApp/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,19 @@
         android:id="@+id/home_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#f4f4f4"
         android:gravity="center_horizontal"
         android:padding="10dp"
-        android:text="Home"
-        android:background="#f4f4f4"/>
+        android:text="Home" />
+
+
+    <TextView
+        android:id="@+id/mvvm_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:background="#f4f4f4"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="mvvm" />
 </LinearLayout>
