--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <TextView
+        android:id="@+id/notify_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:background="#f4f4f4"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="通知" />
+
     <TextView
         android:id="@+id/home_tv"
         android:layout_width="match_parent"
@@ -11,7 +22,8 @@
         android:background="#f4f4f4"
         android:gravity="center_horizontal"
         android:padding="10dp"
-        android:text="Home" />
+        android:text="Home"
+        android:visibility="gone" />
 
 
     <TextView
@@ -22,5 +34,6 @@
         android:background="#f4f4f4"
         android:gravity="center_horizontal"
         android:padding="10dp"
-        android:text="mvvm" />
+        android:text="mvvm"
+        android:visibility="gone" />
 </LinearLayout>
